Fix quote alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,7 +112,7 @@ blockquote:before {
 	float: left;
 	color: #7a7a7a;
 	margin-right: 10px;
-	padding-bottom: 140px;
+	padding-bottom: 160px;
 	margin-top: 20px;
 }
 #connect {
